# CG_OpenGL

./: CMakeLists.txt  fragment_shader.frag  main.cpp  vertex_shader.vert
shaders/: fragment_shader.frag  vertex_shader.vert
src/: Cube.cpp  Cube.h  Light.h  Material.h  Pyramid.cpp  Pyramid.h  game_object.cpp  game_object.h  globals.h  main.cpp  player.cpp  player.h  utils.h
